--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 ##########################################
 # Site Settings
 
-baseURL = "https://nlamsocial.github.io/blog/"
+baseURL = "http://nlamsocial.github.io/blog/"
 title = "LAM NGUYEN"
 languageCode = "en"
 hasCJKLanguage = false
